# sphinx-jinja2

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/templates/: example1.jinja
src/sphinx_jinja2/: __init__.py  _private.py
tests/: conftest.py  test_builds.py
tests/__snapshots__/test_builds/: test_ctx.doctree.xml  test_file_paths.doctree.xml  test_from_file.doctree.xml  test_heading.doctree.xml  test_inline_debug.doctree.xml  test_rebuild_on_file_change.doctree.xml  test_template_inheritance.1.doctree.xml  test_template_inheritance.doctree.xml
